# rake

./: .env.example  .gitignore  Cargo.toml  README.md  VISION.md
.github/workflows/: ci-cd.yml
docker/: .env.example  Dockerfile  Dockerfile.local  docker-compose.yml  local_server.py  localstack-init.sh
infra/: deploy.sh  main.bicep  main.parameters.json
python/: README.md  local.settings.json.example  pyproject.toml  requirements.txt
python/aws/: requirements.txt  samconfig.toml  template.yaml
python/aws/lambdas/: doc_analysis.py
python/aws/layers/rake-runtime/: Makefile
python/examples/: 01_quickstart.py  02_analyze_bytes.py  03_azure_blob_pipeline.py  04_github_pr_review.py  05_http_client.py  06_document_analysis.py
python/prompts/: annual_report.txt  document_analysis.txt
python/rake_sdk/: __init__.py  client.py  exceptions.py  models.py
python/rake_sdk/preprocessors/: __init__.py  archive.py  markdown.py  office.py  pipeline.py  postprocessors.py
python/server/: app.py  s3.py
python/services/code_review/: __init__.py
python/services/data_analysis/: __init__.py
python/services/security_audit/: __init__.py
python/services/shared/: __init__.py  storage.py  telemetry.py
python/tests/: test_preprocessors.py  test_sdk.py
src/: main.rs
src/agent/: mod.rs  tools.rs
src/llm/: claude.rs  llamacpp.rs  mod.rs  openai.rs
src/sandbox/: grep.rs  host_imports.rs  mod.rs  wasi.rs
tests/fixtures/: hello_agent.wat
tests/fixtures/sample/: app.py  config.json  utils.py
